--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel='stylesheet' href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.0/mapbox-gl.css' />
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
